--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "svelte-check": "^2.10.3",
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "svelte-modals": "^1.2.1"
   }
 }
